CR comments.